samples/_failures_safe/1761002528_b8a4d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9489b419.c: In function ‘main’:
./samples/SAFE/__tmp_9489b419.c:157:39: error: expected ‘;’ at end of input
  157 |         for (int i = 0; i < word_count
      |                                       ^
      |                                       ;
./samples/SAFE/__tmp_9489b419.c:157:9: error: expected declaration or statement at end of input
  157 |         for (int i = 0; i < word_count
      |         ^~~
./samples/SAFE/__tmp_9489b419.c:157:9: error: expected declaration or statement at end of input
